--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,7 @@
 
   .dark {
     --background: oklch(0.145 0 0);
+    --brutal: 0.5rem 0.5rem 0 0 white;
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.205 0 0);
     --card-foreground: oklch(0.985 0 0);
@@ -442,5 +443,19 @@ body {
 @media (prefers-color-scheme: dark) {
   .dark-invert {
     filter: invert(1);
+  }
+}
+
+@layer components {
+  .shadow-brutal {
+    box-shadow: 0.5rem 0.5rem 0 0 black;
+  }
+
+  .shadow-brutal-inverse {
+    box-shadow: 0.5rem 0.5rem 0 0 white;
+  }
+
+  .shadow-brutal-white {
+    box-shadow: 0.5rem 0.5rem 0 0 white;
   }
 }
